--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,4 @@ destination.sendMailOnReservation=send_mail_on_reservation
 destination.createUserEmail=create_user_email
 destination.mSendResConfirm=m_send_res_confirm
 destination.cancelReservation=cancel_reservation
+destination.passwordReset=password_reset
